# Default-Customer-Management-System

./: README.md
weiyue/: .gitignore  app.py  config.py  pyproject.toml  test_interface.html
weiyue-web/src-react/: PROJECT_SUMMARY.md  README.md  db.json  package-lock.json  package.json  start.sh
weiyue-web/src-react/src/: App.css  App.tsx  index.css
weiyue-web/src-react/src/components/: Layout.tsx
weiyue-web/src-react/src/pages/: DefaultApplication.tsx  DefaultQuery.tsx  DefaultReasonMaintenance.tsx  DefaultReview.tsx  Login.tsx  ReasonMaintenance.tsx  RebirthApplication.tsx  RebirthReview.tsx  Register.tsx  Statistics.tsx
weiyue-web/src-react/src/services/: api.ts  mockData.ts
weiyue-web/src-react/src/types/: index.ts
weiyue-web/src-react/src/utils/: auth.ts
weiyue/dao/: CustomerDAO.py  DefaultApplicationDAO.py  DefaultReasonDAO.py  RecoveryApplicationDAO.py  RecoveryReasonDAO  RecoveryReasonDAO.py  UserDAO.py
weiyue/db/: app.py  base.py  config.py  dao.py  models.py
weiyue/services/: application_service.py  base_service.py  reason_service.py  user_service.py
