[project]
name = "weiyue"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Atr1ck", email = "3126670240@qq.com"},
]
dependencies = ["flask>=3.1.2", "pymysql>=1.1.2", "flask-cors>=6.0.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
